# openapi-specs/openapi.json
@@ -341,6 +341,39 @@
           }
         }
       }
+    },
+    "/api/Members/photo/{photoId}": {
+      "put": {
+        "tags": [
+          "Members"
+        ],
+        "operationId": "Members_SetMainPhoto",
+        "parameters": [
+          {
+            "name": "photoId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
